--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,9 +1,9 @@
 @charset "UTF-8";
-@import url("blocks.css");
+/*@import url("blocks.css");
 @import url("etc.css");
 @import url("head.css");
 @import url("popup.css");
-@import url("wierd.css");
+@import url("wierd.css");*/
 * {
     margin: 0;
     padding: 0;
