--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,15 +1,14 @@
 /* SCREEN */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 //@import "_reset";
-//@import "_base";
+@import "_base";
 
 @import "_blocks";
 @import "_etc";
 @import "_head";
 @import "_main";
 @import "_popup";
-@import "_wierd";
 
 // FIXES
-//@import "_msie";
+@import "_msie";
 //@import "__xtn";
