--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,7 +1,7 @@
 /* SCREEN */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 //@import "_reset";
-@import "_base";
+//@import "_base";
 
 @import "_blocks";
 @import "_etc";
