--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -16,17 +16,13 @@ $remx: 12px;
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 //color
 
-$amber1: #BE5B12;   $amber2: #733609;
+$navgray1: #8f8f8f; $navgray2: #505050;
+$navred1: #e61c28;  $navred2: #af1e23;
 $button1: #CE4C12;  $button2: #CC3311;
-$cgray1: #4D4E53;   $cgray2: #27282B;
-$green1: #4E801F;   $green2: #2C4912;
-$red1: #AE1E22;     $red2: #5B0E12;
-$plum1: #821A61;    $plum2: #4F0F3B;
-$purple1: #4A2E66;  $purple2: #2E1C3F;
 $teal1: #146A8C;    $teal2: #0A4257;
 
 $red: #bb0826;
-$brown: #8a3604;
+$prime: #bb0826;
 $shad1: rgba( 123, 123, 123, 0.123 );
 $shad2: rgba( 23, 23, 23, 0.23 );
 $shad3: rgba( 77, 77, 77, 0.7 );
