--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -1,3 +1,5 @@
+/* ETC */
+@import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .shrink {
     font-size: 90%;
