--- a/scss/_msie.scss
+++ b/scss/_msie.scss
@@ -1,3 +1,5 @@
+/* MSIE */
+@import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .IE .blocks a.learn {
     line-height: 9px;
