--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -1,5 +1,7 @@
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 /* POPUP */
+@import "__mix";
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+d/* POPUP */
 div.popup {
     color: white;
     display: none;
