--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -23,6 +23,11 @@ $teal1: #146A8C;    $teal2: #0A4257;
 
 $red: #bb0826;
 $prime: #bb0826;
+$prime1: #e6d8c9;
+$prime2: #f7f6f1;
+
+
+
 $shad1: rgba( 123, 123, 123, 0.123 );
 $shad2: rgba( 23, 23, 23, 0.23 );
 $shad3: rgba( 77, 77, 77, 0.7 );
