--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -22,10 +22,12 @@ $button1: #CE4C12;  $button2: #CC3311;
 $teal1: #146A8C;    $teal2: #0A4257;
 
 $red: #bb0826;
-$prime: #bb0826;
-$prime1: #e6d8c9;
-$prime2: #f7f6f1;
+$gold: #fcc60a;
 
+$prime1: $red;
+$prime2: $gold;
+$light1: #e0e3e2;
+$light2: #f6f7f6;
 
 
 $shad1: rgba( 123, 123, 123, 0.123 );
