--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -5,14 +5,14 @@
     background-color: #fff;
 }
 td.blocks {
-    background-color: #f7f6f1;
+    background-color: $light2;
     padding: 5px 9px;
 }
 td.blocks p {
     max-width: 95%;
 }
 .blocks h3 {
-    background-color: $prime1;
+    background-color: $light1;
     margin: -9px;
     margin-bottom: 9px;
     padding: 7px;
