--- a/scss/_head.scss
+++ b/scss/_head.scss
@@ -37,6 +37,6 @@
 }
 #head .navb a.active {
     @include navred();
-    background-color: $prime;
+    background-color: $red;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
