--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -31,11 +31,15 @@
     height: 248px;
     overflow: hidden;
     position: relative;
-    width: 900px;
+    //width: 900px;
+    margin: 0 -25%;
+    width: 200%;
 }
 img.banner {
     float: left;
     margin: 1px 0 5px 0;
+    margin: 0 -20%;
+    height: 166px;
     position: relative;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
