--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -3,48 +3,50 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 td {
     vertical-align: top;
+
+    &.chevron {
+        background-color: $light2;
+        padding: 5px 9px;
+    }
+    &.blocks {
+        background-color: $light2;
+        padding: 5px 9px;
+    }
+    &.blocks p {
+        max-width: 95%;
+    }
+    &.ribron {
+        background-color: $light1;
+        padding: 0px;
+    }
 }
 .blocks {
     background-color: #fff;
-}
-td.chevron {
-    background-color: $light2;
-    padding: 5px 9px;
-}
-td.blocks {
-    background-color: $light2;
-    padding: 5px 9px;
-}
-td.blocks p {
-    max-width: 95%;
-}
-td.ribron {
-    background-color: $light1;
-    padding: 0px;
-}
-.blocks h3 {
-    margin: 0;
-    padding: 7px 20px 5px 10px;
-    text-transform: uppercase;
-    color: $gold;
-    background: {
-        image: url(../images/misc/ribron.png);
-        repeat: no-repeat;
-        position: 100% 50%;
+
+    h3 {
+        margin: 0;
+        padding: 7px 20px 5px 10px;
+        text-transform: uppercase;
+        color: $gold;
+        background: {
+            image: url(../images/misc/ribron.png);
+            repeat: no-repeat;
+            position: 100% 50%;
+        }
+        display: inline-block;
     }
-    display: inline-block;
-}
-.blocks hr {
-    border: 0;
-    border-bottom: 1px solid #ccc;
-    height: 0px;
-    margin: 12px 0 11px 0;
-}
-.blocks a.learn {
-    color: black;
-    float: right;
-    font-size: 9px;
-    font-family: Verdana, Geneva, sans-serif;
-    margin: 0px 3px 0 0;
+    hr {
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        height: 0px;
+        margin: 12px 0 11px 0;
+    }
+    a.learn {
+        color: black;
+        float: right;
+        font-size: 9px;
+        font-family: Verdana, Geneva, sans-serif;
+        margin: 0px 3px 0 0;
+    }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
