--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -18,12 +18,13 @@
     text-shadow: 0px .5px 1px #eee;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#sharebar .cap {
-    margin-right: 6px;
-    vertical-align: top;
-}
 #sharebar {
     float: right;
+
+    .cap {
+        margin-right: 6px;
+        vertical-align: top;
+    }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 /* BANNER */
@@ -46,9 +47,10 @@ img.banner {
 .pushbutton {
     border: 0;
     margin: 0;
-}
-.pushbutton:hover {
-    border: 1px solid #ffc;
-    margin: -1px;
+
+    &:hover {
+        border: 1px solid #ffc;
+        margin: -1px;
+    }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
