--- a/scss/_msie.scss
+++ b/scss/_msie.scss
@@ -1,20 +1,22 @@
 /* MSIE */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-.IE .blocks a.learn {
-    line-height: 9px;
-    margin: 7px 3px 0 0;
-    z-index: 3;
+body.IE {
+    line-height: 150%;
 }
-.IE .vjs-fullscreen-control {
-    display: none;
+.IE {
+    .blocks a.learn {
+        line-height: 9px;
+        margin: 7px 3px 0 0;
+        z-index: 3;
+    }
+    & .vjs-fullscreen-control {
+        display: none;
+    }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 /* JUNK */
 #ie {
     height: auto !important; height : 1%;
-}
-body.IE {
-    line-height: 150%;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
