--- a/scss/_head.scss
+++ b/scss/_head.scss
@@ -50,14 +50,6 @@
     //width: 900px;
     margin: 0 -25%;
 }
-img.banner1 {
-    float: left;
-    margin: 1px 0 5px 0;
-    margin: -99px -20% 11px;
-    height: 150px;
-    position: relative;
-    width: 140%;
-}
 img.banner {
     float: left;
     margin: 1px 0 5px 0;
@@ -65,5 +57,25 @@ img.banner {
     height: 100px;
     position: relative;
     width: 140%;
+    z-index: 9;
+}
+div.blot {
+    background-color: white;
+    float: right;
+    height: 40px;
+    position: relative;
+    margin-top: -40px;
+    width: 50%;
+    z-index: 3;
+}
+img.banner1 {
+    @extend img.banner;
+    margin: -99px -20% 11px;
+    height: 150px;
+}
+div.blot1 {
+    @extend div.blot;
+    height: 60px;
+    margin-top: -60px;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
