--- a/scss/_head.scss
+++ b/scss/_head.scss
@@ -1,7 +1,7 @@
 /* HEAD */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#head {
+header {
     height: 90px;
     padding: 28px;
     margin-bottom: 1px;
@@ -47,16 +47,15 @@
     height: 248px;
     overflow: hidden;
     position: relative;
-    //width: 900px;
     margin: 0 -25%;
 }
 img.banner {
     float: left;
     margin: 1px 0 5px 0;
-    margin: -69px -20% 11px;
-    height: 100px;
+    margin: -63px -10% 3px;
+    height: 90px;
     position: relative;
-    width: 140%;
+    width: 120%;
     z-index: 9;
 }
 div.blot {
@@ -72,6 +71,7 @@ img.banner1 {
     @extend img.banner;
     margin: -99px -20% 11px;
     height: 150px;
+    width: 140%;
 }
 div.blot1 {
     @extend div.blot;
