--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -78,7 +78,7 @@ html {
     position: relative;
     width: 898px;
 }
-#footer {
+footer {
     clear: both;
     color: #857b72;
     border-top: 1px solid #e7e5e3;
