--- a/scss/_head.scss
+++ b/scss/_head.scss
@@ -48,6 +48,9 @@ header {
     position: relative;
     margin: 0 -25%;
 }
+#Banner {
+    display: none;
+}
 img.banner {
     float: left;
     margin: 1px 0 5px 0;
