--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -31,6 +31,7 @@ td {
             position: 100% 50%;
         }
         display: inline-block;
+        line-height: 22px;
         margin: 0;
         padding: 4px 20px 1px 10px;
         text-transform: uppercase;
