--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -10,7 +10,7 @@ td {
     }
     &.blocks {
         background-color: $light2;
-        padding: 5px 9px;
+        padding: 8px;
     }
     &.blocks p {
         max-width: 95%;
