--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -8,7 +8,7 @@
 html {
     font-size: 11.5px;
     height: 100%;
-    line-height: 140%;
+    line-height: 145%;
     position: absolute;
     width: 100%;
 
@@ -64,6 +64,7 @@ html {
         ul {
             font-size: 100%;
             list-style-type: square;
+            margin-top: 9px;
             padding-left: 22px;
         }
     }
