--- a/scss/_msie.scss
+++ b/scss/_msie.scss
@@ -1,16 +1,19 @@
 /* MSIE */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-body.IE {
-    line-height: 150%;
-}
-.IE {
+.msie {
+    body {
+        line-height: 150%;
+    }
     .blocks a.learn {
         line-height: 9px;
         margin: 7px 3px 0 0;
         z-index: 3;
     }
     & .vjs-fullscreen-control {
+        display: none;
+    }
+    div.blot, div.blot1 {
         display: none;
     }
 }
