--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -36,4 +36,10 @@
         margin: -1px;
     }
 }
+.external {
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: -2px;
+    margin-bottom: -2px;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
