--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -42,4 +42,7 @@
     margin-right: -2px;
     margin-bottom: -2px;
 }
+:target {
+    background-color: #fffff8;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
