--- a/scss/_head.scss
+++ b/scss/_head.scss
@@ -52,6 +52,7 @@ img.banner {
     margin: 1px 0 5px 0;
     margin: -63px -10% 3px;
     height: 90px;
+    left: 0;
     position: absolute;
     width: 120%;
     top: 245px;
