--- a/scss/_msie.scss
+++ b/scss/_msie.scss
@@ -14,7 +14,7 @@
         display: none;
     }
     div.blot, div.blot1 {
-        display: none;
+       // display: none;
     }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
