begin scroll enhance

--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -12,6 +12,7 @@ $layers: '../images/layers';
 $resp: 800px;
 $debug: 1;
 $remx: 12px;
+$hilite: rgba(255, 255, 99, 0.7);
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 //color
