--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -17,6 +17,11 @@
 .pull, .blocks {
     text-shadow: 0px .5px 1px #eee;
 }
+.headshot {
+    float: left;
+    height: 80px; width: 60px;
+    margin-right: 10px;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #sharebar {
     float: right;
