--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -47,11 +47,10 @@
     margin-right: -2px;
     margin-bottom: -2px;
 }
-:target {
+.target {
     background-color: $hilite;
-    @include transition( all 0.5s ease-out 0 );
 }
-.fade:target {
-    background-color: white;
+:target {
+    @include transition( all 0.5s ease-out 0 );
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
