tweak with gareth

--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -27,7 +27,7 @@ td {
     background-color: #fff;
 
     h3 {
-        color: $gold;
+        color: $prime2;
         background: {
             image: url(../images/misc/ribron.png);
             repeat: no-repeat;
