--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -23,7 +23,7 @@ html {
             margin-bottom: 7px;
         }
         h2, h3 {
-            color: $red;
+            color: $prime1;
         }
         h3 {
             font-size: 18px;
