--- a/scss/_msie.scss
+++ b/scss/_msie.scss
@@ -13,7 +13,7 @@
     & .vjs-fullscreen-control {
         display: none;
     }
-    div.blot, div.blot1 {
+    div.blot-small, div.blot-large {
        // display: none;
     }
 }
