new charity logos

--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -22,6 +22,10 @@
     height: 80px; width: 60px;
     margin-right: 10px;
 }
+.npLogo {
+    float: right;
+    margin-left: 10px;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #sharebar {
     float: right;
