tweak colors ever so slightly

--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -25,8 +25,8 @@ $gold: #fcc60a;
 
 $prime1: $red;
 $prime2: white;
-$light1: #e0e3e2;
-$light2: #f6f7f6;
+$light1: #e0dddb;
+$light2: #f5f5f4;
 
 
 $shad1: rgba( 123, 123, 123, 0.123 );
