--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -19,7 +19,8 @@
 }
 .headshot {
     float: left;
-    height: 80px; width: 60px;
+    width: 128px; height: 96px;
+    margin-bottom: 5px;
     margin-right: 10px;
 }
 .npLogo {
