--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,6 +1,6 @@
 /* SCREEN */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-//@import "_reset";
+@import "_reset";
 @import "_base";
 
 @import "_blocks";
