split header and banner

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -3,9 +3,10 @@
 @import "_reset";
 @import "_base";
 
+@import "_banner";
 @import "_blocks";
 @import "_etc";
-@import "_head";
+@import "_header";
 @import "_main";
 @import "_popup";
 @import "_text";
