--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -5,9 +5,9 @@
 
 @import "_banner";
 @import "_blocks";
-@import "_etc";
 @import "_header";
-@import "_main";
+@import "_layout";
+@import "_misc";
 @import "_popup";
 @import "_text";
 
