--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -4,7 +4,7 @@
 div.popup {
     color: white;
     display: none;
-    padding: 10% 0 15% 0;
+    padding: 5% 0 5% 0;
     text-align: center;
 
     & > div,
@@ -16,7 +16,7 @@ div.popup {
         max-width: 90%;
     }
     &.big {
-        background-image: url("../images/misc/masq.png");
+        background-color: rgba(0, 0, 0, 0.666);
         display: block;
         height: 100%;
         left: 0;
@@ -25,6 +25,10 @@ div.popup {
         width: 100%;
         /*	background-color: rgba(0,0,0,.5);*/
         z-index: 999;
+
+        img {
+            box-shadow: 0 11px 66px black;
+        }
     }
 }
 a.popup {
