--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,8 +8,14 @@ header {
 
     .mast {
         height: 80px;
+        .logo {
+            float: left;
+        }
+        .stage {
+            float: right;
+        }
     }
-    .navb { /* baseline */
+    nav { /* baseline */
         @include navBack();
         color: gray;
         font-family: Verdana, Geneva, sans-serif;
@@ -17,27 +23,28 @@ header {
         height: 24px;
         margin-top: 13px;
         overflow: hidden;
-    }
-    .navb a {
-        color: #eee;
-        border-right: 1px solid #aaa;
-        display: block;
-        float: left;
-        height: 24px;
-        margin: 0;
-        padding: 3px 12px;
-        text-decoration: none;
-    }
-    .navb a:hover {
-        @include navFore();
-        border-left: 1px solid white;
-        border-right: 1px solid white;
-        opacity: 0.7;
-        margin-left: -1px;
-    }
-    .navb a.active {
-        @include navFore();
-        background-color: $navfore2;
+
+        a {
+            color: #eee;
+            border-right: 1px solid #aaa;
+            display: block;
+            float: left;
+            height: 24px;
+            margin: 0;
+            padding: 3px 12px;
+            text-decoration: none;
+        }
+        a:hover {
+            @include navFore();
+            border-left: 1px solid white;
+            border-right: 1px solid white;
+            opacity: 0.7;
+            margin-left: -1px;
+        }
+        a.active {
+            @include navFore();
+            background-color: $navfore2;
+        }
     }
 }
 
