--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -1,6 +1,9 @@
 /* MISC */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+article {
+/*    background-color: yellow;*/
+}
 .shrink {
     font-size: 90%;
     line-height: 130%;
