--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -27,7 +27,7 @@ html {
     position: relative;
     width: 956px;
 }
-#feature {
+#Feature {
     margin-left: 28px;
     overflow: visible;
     position: relative;
