migrate more experimental css

--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -14,6 +14,11 @@ $debug: 1;
 $remx: 12px;
 $hilite: rgba(255, 255, 99, 0.7);
 
+// fonts
+$SM: 0.666rem;
+$MD: 0.8rem;
+$LG: 1.1rem;
+
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 //color
 
