--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 /* HEADER */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-header {
+#Page > header {
     height: 146px;
     margin-bottom: 1px;
     padding: 28px;
