rediv as mobile

--- a/scss/_mini_btn.scss
+++ b/scss/_mini_btn.scss
@@ -1,7 +1,7 @@
 /* BUTTONS */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-.iphone {
+#Mobile {
     button {
         //        border-color: #ccc;
         //        border-style: solid;
