--- a/scss/_mini_nav.scss
+++ b/scss/_mini_nav.scss
@@ -1,7 +1,7 @@
 /* CHEV (NAV) */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-.iphone .chevar {
+#Mobile .chevar {
     background-color: $beige2;
     border-top: 1px solid white;
     border-bottom: 2px solid white;
@@ -42,7 +42,7 @@
         }
     }
 }
-.iphone .mini .chevar {
+#Mobile .mini .chevar {
     border-top: 2px solid white;
     border-bottom: 1px solid white;
     font-size: 125%;
