--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -10,13 +10,7 @@
 
     z-index: 1;
 
-    .mini {
-        left: $rem * 8.6; // 32px;
-        top: $rem * 7.6; // 110px;
-    }
-
-
-    .mini {
+    .port {
         border: 4px solid #eee;
         height: 452px;
         left: 129px; top: 115px;
