--- a/scss/_mini_nav.scss
+++ b/scss/_mini_nav.scss
@@ -42,7 +42,7 @@
         }
     }
 }
-#Mobile .mini .chevar {
+#Mobile .port .chevar {
     border-top: 2px solid white;
     border-bottom: 1px solid white;
     font-size: 125%;
