--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -1,50 +1,52 @@
 /* BLOCKS */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-td {
-    vertical-align: top;
-    &.blocks > p, &.blocks > ul {
-        font-size: 95%;
-        line-height: 130%;
-    }
-    &.chevron {
-        background-color: $light2;
-        padding: 5px 9px;
-    }
-    &.blocks {
-        background-color: $light2;
-        padding: 8px;
-    }
-    &.blocks p {
-        max-width: 95%;
-    }
-    &.ribron {
-        background-color: $light1;
-        padding: 0px;
-    }
-}
-.blocks {
-    background-color: #fff;
-
-    h3 {
-        color: $prime2;
-        background: {
-            image: url(../images/misc/ribron.png);
-            repeat: no-repeat;
-            position: 100% 50%;
+#Feature table {
+    td {
+        vertical-align: top;
+        &.blocks > p, &.blocks > ul {
+            font-size: 95%;
+            line-height: 130%;
         }
-        display: inline-block;
-        line-height: 22px;
-        margin: 0;
-        padding: 4px 20px 1px 10px;
-        text-transform: uppercase;
-        white-space: nowrap;
+        &.chevron {
+            background-color: $light2;
+            padding: 5px 9px;
+        }
+        &.blocks {
+            background-color: $light2;
+            padding: 8px;
+        }
+        &.blocks p {
+            max-width: 95%;
+        }
+        &.ribron {
+            background-color: $light1;
+            padding: 0px;
+        }
     }
-    a.learn {
-        float: right;
-        font-size: 9px;
-        font-family: Verdana, Geneva, sans-serif;
-        margin: 5px 9px;
+    .blocks {
+        background-color: #fff;
+
+        h3 {
+            color: $prime2;
+            background: {
+                image: url(../images/misc/ribron.png);
+                repeat: no-repeat;
+                position: 100% 50%;
+            }
+            display: inline-block;
+            line-height: 22px;
+            margin: 0;
+            padding: 4px 20px 1px 10px;
+            text-transform: uppercase;
+            white-space: nowrap;
+        }
+        a.learn {
+            float: right;
+            font-size: 9px;
+            font-family: Verdana, Geneva, sans-serif;
+            margin: 5px 9px;
+        }
     }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
