--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -3,14 +3,14 @@
 @import "_reset";
 @import "_base";
 
-@import "_banner";
-@import "_blocks";
-@import "_header";
+@import "_feat_blocks";
+@import "_feat_misc";
 @import "_layout";
-@import "_misc";
+@import "_page_banner";
+@import "_page_header";
 @import "_popup";
+@import "_respond";
 @import "_text";
 
 // FIXES
 @import "_msie";
-//@import "__xtn";
