--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -1,104 +1,25 @@
-/* MISC */
+/* MSIE */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#Feature {
-    article {
-        /*    background-color: yellow;*/
+.msie {
+    body {
+        line-height: 150%;
     }
-    .shrink {
-        font-size: 90%;
-        line-height: 130%;
+    .blocks a.learn {
+        line-height: 9px;
+        margin: 7px 3px 0 0;
+        z-index: 3;
     }
-    .hide {
+    & .vjs-fullscreen-control {
         display: none;
     }
-    .push, .navb a {
-        text-shadow: 0px .5px 1px #111;
+    div.blot-small, div.blot-large {
+        // display: none;
     }
-    .pull, .blocks {
-        text-shadow: 0px .5px 1px #eee;
-    }
-    .pushbutton {
-        border: 0;
-        margin: 0;
-
-        &:hover {
-            border: 1px solid #ffc;
-            margin: -1px;
+    div.popup {
+        &.big {
+            background-image: url("../images/misc/masq.png");
         }
-    }
-    .external {
-        margin-top: 2px;
-        margin-left: -2px;
-        margin-right: -2px;
-        margin-bottom: -2px;
-    }
-    .target {
-        background-color: $hilite;
-    }
-    :target {
-        @include transition( all 0.5s ease-out 0 );
-    }
-    // GIVING
-
-    .givingLogo img {
-        margin: 12px 22px;
-    }
-    .headshot {
-        float: left;
-        width: 128px; height: 96px;
-        margin-bottom: 5px;
-        margin-right: 10px;
-    }
-    .npLogo {
-        float: right;
-        margin-left: 10px;
-    }
-}
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#sharebar {
-    float: right;
-
-    .cap {
-        margin-right: 6px;
-        vertical-align: top;
-    }
-}
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-body {
-    @media (max-width: 1600px) {
-        zoom: 1;
-    }
-    @media (max-width: 1000px) {
-        zoom: 0.9;
-    }
-    @media (max-width: 900px) {
-        zoom: 0.8;
-    }
-    @media (max-width: 800px) {
-        zoom: 0.7;
-    }
-    @media (max-width: 750px) {
-        zoom: 0.6;
-    }
-    @media (max-width: 600px) {
-        zoom: 1;
-    }
-    @media (max-width: 475px) {
-        zoom: 0.8;
-    }
-
-    .cache {
-        display: none;
-    }
-    .show {
-        display: initial !important;
-    }
-    .left {
-        float: left;
-    }
-    .right {
-        float: right;
     }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
