--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -3,12 +3,12 @@
 @import "_reset";
 @import "_base";
 
+@import "_feat_banner";
 @import "_feat_blocks";
 @import "_feat_misc";
 @import "_layout";
-@import "_page_banner";
 @import "_page_header";
-@import "_popup";
+@import "_page_popup";
 @import "_respond";
 @import "_text";
 
