--- a/scss/_feat_banner.scss
+++ b/scss/_feat_banner.scss
@@ -1,7 +1,7 @@
 /* BANNER */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#Banner {
+#Feature #Banner {
     display: none;
     position: relative;
     height: 295px;
@@ -24,18 +24,18 @@
             width: 120%;
         }
         &.large {
-            margin: -99px -20% 11px;
             height: 150px;
+            margin: -99px -20% 11px;
             width: 140%;
         }
     }
     div.blot {
         background-color: white;
         bottom: 50px;
+        position: absolute;
         right: 0;
         width: 55%;
         z-index: 3;
-        position: absolute;
 
         &.small {
             @extend div.blot;
