--- a/scss/_page_popup.scss
+++ b/scss/_page_popup.scss
@@ -1,7 +1,7 @@
 /* POPUP */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#Page {
+body {
     div.popup {
         color: white;
         cursor: pointer;
